--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "font-awesome": "^4.7.0",
-    "node-sass": "^4.13.1",
+    "sass": "^1.49.9",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
