--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11"
   },
+  "scripts": {
+    "serve": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build"
+  },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@vue/cli-plugin-babel": "~4.3.0",
